1.4.8
- Removed unnecessary Nullable and NotNull annotations in PacketEvents
- Implemented AllArgsConstructors in PacketEvents
- Uninjected decoder channel in player pipeline
- Removed all mentions and supporting code for other server versions in PacketEvents; all functions now exclusively work with 1.8.8
- Removed unnecessary PacketEvents classes, methods, and functions, significantly slimming the package down to its essentials
- Added verbose mode to Vulture; check debug info in violations now hidden by default
- Improved liquid detection; fixed false positives in Flight A with liquids
- Added more exceptions to Flight C check
- Fixed hoverable message function in MessageUtil
- Minor formatting changes